--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 </section>
                 <div class="container-form">
                     <form id="loginForm" class="container-login">
-                        <label for="username">Usuario:</label>
+                        <label for="username" class="text-form">Usuario:</label>
                         <input type="text" 
                                id="username" 
                                name="username" 
@@ -26,7 +26,7 @@
                                required
                                autocomplete="username">
                         
-                        <label for="password">Contraseña:</label>
+                        <label for="password" class="text-form">Contraseña:</label>
                         <input type="password" 
                                id="password" 
                                name="password" 
